fixed overflow in mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,14 @@
 }
 
 /* #root {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     overflow: hidden;
 } */
 
 main {
     height: 100%;
-    /* width: 100svw; */
+    width: 100svw;
     /* position: relative; */
     display: flex;
     /* overflow: hidden; */
@@ -282,6 +282,9 @@ footer p {
 }
 
 @media only screen and (max-width: 768px) {
+    main {
+        overflow-x: hidden;
+    }
     .home-intro {
         max-width: 700px;
         margin: auto;
@@ -303,9 +306,9 @@ footer p {
         visibility: hidden;
     }
     #header.show-header {
-        position: sticky;
+        /* position: sticky;
         top: 0;
-        z-index: 1000;
+        z-index: 1000; */
         flex: 0 0 100%;
         visibility: visible;
     }
